// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName dscFieldName--noResults"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      aria-label="Geo point field"
      class="euiToken euiToken--euiColorVis5 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
      title="Geo point field"
    >
      <div
        data-euiicon-type="tokenGeo"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="eui-textTruncate"
      title="test.test.test"
    >
      t.t.test
    </span>
  </div>
</div>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      aria-label="Number field"
      class="euiToken euiToken--euiColorVis0 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
      title="Number field"
    >
      <div
        data-euiicon-type="tokenNumber"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="eui-textTruncate"
      title="test.test.test"
    >
      test.test.test
    </span>
  </div>
</div>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      aria-label="String field"
      class="euiToken euiToken--euiColorVis1 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
      title="String field"
    >
      <div
        data-euiicon-type="tokenString"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="eui-textTruncate"
      title="test"
    >
      test
    </span>
  </div>
</div>
`;
